--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - PG_HOST=node_database
     depends_on:
       - node_database
-    command: node app.js
+    command: bash -c 'while !</dev/tcp/node_database/5432; do sleep 1; done; node app.js'
       
   node_database:
     container_name: node_database
