--- a/memberservice/package.json
+++ b/memberservice/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "memberservice",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "pg": "^8.12.0",
